--- a/package.json
+++ b/package.json
@@ -14,14 +14,24 @@
     "bootstrap": "^4.0.0-alpha.2",
     "lodash": "^4.6.1",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react-dom": "^0.14.7",
+    "react-router": "^2.8.1"
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-core": "^6.16.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.5.0",
     "chai": "^3.5.0",
+    "css-loader": "^0.25.0",
     "mocha": "2.3.3",
-    "sinon": "1.17.3"
-  }
+    "react-hot-loader": "^3.0.0-beta.5",
+    "sinon": "1.17.3",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.1"
+  },
+  "scripts": {
+  "start": "node server.js"
+}
 }
